--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vicons/ionicons5": "^0.13.0",
+    "abcjs": "^6.5.2",
     "axios": "^1.13.2",
     "naive-ui": "^2.43.2",
     "pinia": "^3.0.4",
